--- a/src/main/deploy/bindings.properties
+++ b/src/main/deploy/bindings.properties
@@ -34,14 +34,13 @@ Intake: 1
 Zero: 3
 ScoreAmp: 5
 ReverseIntake: 2
-
 # Rotation Stick
 
 AutoShooter: 1
 
 # Gunner Stick
 PivotUp: Y
-PivotDown: A
+Shoot: A
 IntakeIn: RightBumper
 IntakeOut: LeftBumper
 TelecopingOut: X
