--- a/.pathplanner/settings.json
+++ b/.pathplanner/settings.json
@@ -1,8 +1,10 @@
 {
   "robotWidth": 0.61,
-  "robotLength": 0.88,
+  "robotLength": 1.02,
   "holonomicMode": true,
-  "pathFolders": [],
+  "pathFolders": [
+    "3 Note"
+  ],
   "autoFolders": [],
   "defaultMaxVel": 3.0,
   "defaultMaxAccel": 3.0,
