needs a pid but we need to use the actuator

--- a/src/main/deploy/bindings.properties
+++ b/src/main/deploy/bindings.properties
@@ -40,18 +40,8 @@ AutoShooter: 1
 
 # Gunner Stick
 PivotUp: Y
-Shoot: A
-IntakeIn: RightBumper
-IntakeOut: LeftBumper
-TelecopingOut: X
-TelecopingIn: B
-SlideLeft: Left
-SlideRight Right
-RotateLeft: Up
-RotateRight: Down
-DownToStop: Start
-LightSwitch: Back
-Override: RightTrigger
-Quick: LeftTrigger
+PivotDown: A
+Shoot: X
+pivotGoSetpoint: B
 
 #Rotational Stick
