good auto drafts

--- a/.pathplanner/settings.json
+++ b/.pathplanner/settings.json
@@ -3,12 +3,16 @@
   "robotLength": 1.02,
   "holonomicMode": true,
   "pathFolders": [
+    "2 Amp",
     "2 Speaker, 1 Amp",
     "3 Note Speaker",
     "3 Speaker, 1 Amp",
     "4 Note Speaker",
+    "4 Note Speaker #2",
     "6 Note Speaker",
-    "4 Note Speaker #2"
+    "Devious 4 Speaker",
+    "Alternate Paths",
+    "Start poses"
   ],
   "autoFolders": [],
   "defaultMaxVel": 3.0,
