--- a/.pathplanner/settings.json
+++ b/.pathplanner/settings.json
@@ -7,10 +7,11 @@
     "6 Speaker",
     "Devious 4 Speaker",
     "Init",
+    "4 Note Mid",
     "extra"
   ],
   "autoFolders": [],
-  "defaultMaxVel": 3.0,
+  "defaultMaxVel": 1.0,
   "defaultMaxAccel": 3.0,
   "defaultMaxAngVel": 540.0,
   "defaultMaxAngAccel": 720.0,
