--- a/src/main/deploy/bindings.properties
+++ b/src/main/deploy/bindings.properties
@@ -45,5 +45,7 @@ Shoot: X
 pivotGoSetpoint: B
 ShooterIntake: LeftBumper
 OverrideShooter: RightBumper
+ReallyOverrideShooter: Start
+
 
 #Rotational Stick
