--- a/.pathplanner/settings.json
+++ b/.pathplanner/settings.json
@@ -16,7 +16,8 @@
     "Devious 4 Speaker",
     "Four note (speaker notes)",
     "Init",
-    "3 Note (amp side)"
+    "0 Note variants",
+    "Three note (speaker notes) starting variants"
   ],
   "autoFolders": [
     "real"
