--- a/.pathplanner/settings.json
+++ b/.pathplanner/settings.json
@@ -8,7 +8,8 @@
     "3 Note (source side) - 6,7",
     "3 Note (source side) - 7,8",
     "4 note (centre speaker) - 2,1,3",
-    "5 note (center) - 1, 2 , 3, 4"
+    "5 note (center) - 1, 2 , 3, 4",
+    "New Folder"
   ],
   "autoFolders": [
     "Victoria"
