--- a/.pathplanner/settings.json
+++ b/.pathplanner/settings.json
@@ -9,7 +9,7 @@
     "3 Note (source side) - 7,8",
     "4 note (centre speaker) - 2,1,3",
     "5 note (center) - 1, 2 , 3, 4",
-    "New Folder"
+    "4 note (amp side) 3,4,5"
   ],
   "autoFolders": [
     "Victoria"
