--- a/.pathplanner/settings.json
+++ b/.pathplanner/settings.json
@@ -7,9 +7,10 @@
     "3 Note (centre speaker) - 2,6",
     "3 Note (source side) - 6,7",
     "3 Note (source side) - 7,8",
+    "4 note (amp side) 3,4,5",
     "4 note (centre speaker) - 2,1,3",
     "5 note (center) - 1, 2 , 3, 4",
-    "4 note (amp side) 3,4,5"
+    "3 note (through stage) - 2, 6"
   ],
   "autoFolders": [
     "Victoria"
