--- a/src/main/deploy/bindings.properties
+++ b/src/main/deploy/bindings.properties
@@ -33,7 +33,7 @@ ToggleFieldOriented: 3-Pressed
 Intake: 1
 Zero: 3
 ScoreAmp: 5
-ReverseIntake: 2
+SlowButton: 2
 DriveStraight: 4
 # Rotation Stick
 
