--- a/.pathplanner/settings.json
+++ b/.pathplanner/settings.json
@@ -3,14 +3,15 @@
   "robotLength": 0.53,
   "holonomicMode": true,
   "pathFolders": [
-    "3 Note (amp side) - 1,4",
-    "3 Note (centre speaker) - 2,6",
-    "3 Note (source side) - 6,7",
-    "3 Note (source side) - 7,8",
-    "4 note (amp side) 3,4,5",
-    "4 note (centre speaker) - 2,1,3",
     "5 note (center) - 1, 2 , 3, 4",
-    "3 note (through stage) - 2, 6"
+    "4+1 paths",
+    "4 note (centre speaker) - 2,1,3",
+    "4 note (amp side) 3,4,5",
+    "3 note (through stage) - 2, 6",
+    "3 Note (source side) - 7,8",
+    "3 Note (source side) - 6,7",
+    "3 Note (centre speaker) - 2,6",
+    "3 Note (amp side) - 1,4"
   ],
   "autoFolders": [
     "New Folder",
